--- a/src/template/.env
+++ b/src/template/.env
@@ -1,4 +1,4 @@
 VUE_APP_SECRET=secret
 VUE_APP_GRAPHQL_URI=http://localhost:5000/graphql
 VUE_APP_GRAPHQL_SUBCRIPTIONS_URI=ws://localhost:5000/subscriptions
-VUE_APP_MEDIA_URI=http://localhost:5000/uploads
+VUE_APP_MEDIA_URI=http://localhost:5000/storage
