--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,16 +1,16 @@
 aniso8601==7.0.0
 audioread==2.1.8
+autopep8==1.5
 Babel==2.8.0
 bcrypt==3.1.7
 blinker==1.4
 cffi==1.13.2
 Click==7.0
 decorator==4.4.1
-Django==2.2.7
-django-filter==2.2.0
 Flask==1.1.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
+Flask-CLI==0.4.0
 Flask-Cors==3.0.8
 Flask-GraphQL==2.0.0
 Flask-GraphQL-Auth==1.3.0
@@ -39,6 +39,7 @@ numpy==1.17.4
 passlib==1.7.2
 pendulum==2.0.5
 promise==2.2.1
+pycodestyle==2.5.0
 pycparser==2.19
 PyJWT==1.7.1
 PyMySQL==0.9.3
