--- a/src/template/package.json
+++ b/src/template/package.json
@@ -23,9 +23,10 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.27",
-    "peaks.js": "^0.14.5",
     "querystring": "^0.2.0",
+    "recordrtc": "^5.5.8",
     "tailwindcss": "^1.1.4",
+    "videojs": "^1.0.0",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.2",
     "vue-class-component": "^7.0.2",
