--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -7,6 +7,8 @@ blinker==1.4
 cffi==1.13.2
 Click==7.0
 decorator==4.4.1
+Django==2.2.7
+django-filter==2.2.0
 Flask==1.1.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
@@ -27,6 +29,7 @@ graphql-core==2.2.1
 graphql-relay==2.0.0
 graphql-server-core==1.1.1
 greenlet==0.4.15
+gunicorn==20.0.4
 iso8601==0.1.12
 itsdangerous==1.1.0
 Jinja2==2.10.3
@@ -38,6 +41,7 @@ numba==0.46.0
 numpy==1.17.4
 passlib==1.7.2
 pendulum==2.0.5
+pprint==0.1
 promise==2.2.1
 pycodestyle==2.5.0
 pycparser==2.19
