update vue production config

--- a/src/template/.env.production
+++ b/src/template/.env.production
@@ -1,4 +1,4 @@
 VUE_APP_SECRET=secret
-VUE_APP_GRAPHQL_URI=http://35.198.239.170:9000/graphql
+VUE_APP_GRAPHQL_URI=http://podcast-api.iviet.com/graphql
 VUE_APP_GRAPHQL_SUBCRIPTIONS_URI=ws://localhost:9000/subscriptions
-VUE_APP_MEDIA_URI=http://35.198.239.170:9000/storage
+VUE_APP_MEDIA_URI=http://podcast-api.iviet.com/storage
