--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -4,9 +4,16 @@ autopep8==1.5
 Babel==2.8.0
 bcrypt==3.1.7
 blinker==1.4
+boto3==1.12.22
+botocore==1.15.22
+cachetools==4.0.0
+certifi==2019.11.28
 cffi==1.13.2
+chardet==3.0.4
 Click==7.0
 decorator==4.4.1
+docutils==0.15.2
+filedepot==0.7.1
 Flask==1.1.1
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
@@ -20,6 +27,11 @@ Flask-Principal==0.4.0
 Flask-Security==3.0.0
 Flask-WTF==0.14.2
 gevent==1.4.0
+google-api-core==1.16.0
+google-auth==1.11.3
+google-cloud-core==1.3.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.51.0
 graphene==2.1.8
 graphene-file-upload==1.2.2
 graphene-sqlalchemy==2.2.2
@@ -29,9 +41,11 @@ graphql-relay==2.0.0
 graphql-server-core==1.1.1
 greenlet==0.4.15
 gunicorn==20.0.4
+idna==2.9
 iso8601==0.1.12
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jmespath==0.9.5
 joblib==0.14.1
 librosa==0.7.1
 llvmlite==0.30.0
@@ -42,6 +56,9 @@ passlib==1.7.2
 pendulum==2.0.5
 pprint==0.1
 promise==2.2.1
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.5.0
 pycparser==2.19
 PyJWT==1.7.1
@@ -49,8 +66,11 @@ PyMySQL==0.9.3
 python-dateutil==2.8.1
 pytz==2019.3
 pytzdata==2019.3
+requests==2.23.0
 resampy==0.2.2
+rsa==4.0
 Rx==1.6.1
+s3transfer==0.3.3
 scikit-learn==0.22
 scipy==1.3.3
 singledispatch==3.4.0.3
@@ -59,5 +79,7 @@ SoundFile==0.10.3.post1
 speaklater==1.3
 SQLAlchemy==1.3.11
 sqlparse==0.3.0
+Unidecode==1.1.1
+urllib3==1.25.8
 Werkzeug==0.16.0
 WTForms==2.2.1
