--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "vue-moment": "^4.0.0",
     "vue-nprogress": "^0.1.5",
     "vue-numerals": "^3.0.5",
+    "vue-page-title": "^1.1.6",
     "vue-property-decorator": "^8.3.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
