--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -78,6 +78,7 @@ singledispatch==3.4.0.3
 six==1.14.0
 SoundFile==0.10.3.post1
 SQLAlchemy==1.3.15
+sqlalchemy-mptt==0.2.5
 toml==0.10.0
 typed-ast==1.4.1
 Unidecode==1.1.1
