--- a/web/.env.production
+++ b/web/.env.production
@@ -1,4 +1,4 @@
 VUE_APP_SECRET=secret
-VUE_APP_GRAPHQL_URI=https://podcast-api.iviet.com/graphql
+VUE_APP_GRAPHQL_URI=https://podcast-api.kubil.app/graphql
 VUE_APP_GRAPHQL_SUBCRIPTIONS_URI=ws://localhost:9000/subscriptions
-VUE_APP_MEDIA_URI=https://podcast-api.iviet.com/storage
+VUE_APP_MEDIA_URI=https://podcast-api.kubil.app/storage
